--- a/app/src/main/res/layout/main_explistview_group_item.xml
+++ b/app/src/main/res/layout/main_explistview_group_item.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="@dimen/item_size">
 
     <TextView
         android:id="@+id/group_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:textSize="20dp"
-        android:text="常见问题"
-        android:textStyle="bold"/>
+        style="@style/item_text"
+        android:textSize="@dimen/back_size"
+        android:text="常见问题"/>
 
     <ImageView
         android:id="@+id/group_image"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/back_size"
+        android:layout_height="@dimen/back_size"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="@dimen/back_size"
         android:textColor="#999999"
         android:src="@drawable/jt_bottom"/>
 </RelativeLayout>
