--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,12 @@
         <item name="android:layout_marginLeft">@dimen/back_size</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="listview_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:overScrollMode">never</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:elevation">1dp</item>
+    </style>
 </resources>
