--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:background="@color/bg_color"
     tools:context=".MainActivity">
     <View
+        android:id="@+id/view_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_top"
         android:background="@color/colorPrimary"></View>
